{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 263,
  "lineage": "a4687cfc-2ab2-095e-06da-da309c661299",
  "resources": [
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01b6293f72b5aa189",
            "arn": "arn:aws:ec2:us-east-1:869935112458:instance/i-044bc4b323360cf7f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044bc4b323360cf7f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2-KEYPAIR",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-095fb68641cc2d390"
              }
            ],
            "primary_network_interface_id": "eni-095fb68641cc2d390",
            "private_dns": "ip-10-0-1-64.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.64",
            "public_dns": "ec2-54-196-241-36.compute-1.amazonaws.com",
            "public_ip": "54.196.241.36",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ce4f5a8a36184d49",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0750e0912626162b4",
            "tags": {
              "Name": "web_instance"
            },
            "tags_all": {
              "Name": "web_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bcda565418f7d7eb"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869935112458",
            "id": "i-044bc4b323360cf7f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.db.aws_db_instance.web_db",
            "module.db.aws_db_subnet_group.private_db_subnet_group",
            "module.db.data.template_file.web_instance_userdata",
            "module.instance.data.aws_ami.data_ami",
            "module.sg.aws_security_group.allow_tls",
            "module.sg.aws_security_group.private_sg",
            "module.vpc.aws_subnet.private_subnet_1",
            "module.vpc.aws_subnet.private_subnet_2",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935112458:security-group/sg-0bcda565418f7d7eb",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0bcda565418f7d7eb",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "869935112458",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dae2106a257dfaca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869935112458",
            "id": "sg-0bcda565418f7d7eb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935112458:security-group/sg-01dbecc7f8441acf4",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-01dbecc7f8441acf4",
            "ingress": [],
            "name": "private_sg",
            "name_prefix": "",
            "owner_id": "869935112458",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_sg"
            },
            "tags_all": {
              "Name": "private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dae2106a257dfaca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869935112458",
            "id": "sg-01dbecc7f8441acf4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935112458:security-group-rule/sgr-0029cf7adad91ec73",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0029cf7adad91ec73",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0bcda565418f7d7eb",
            "security_group_rule_id": "sgr-0029cf7adad91ec73",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869935112458",
            "id": "sgr-0029cf7adad91ec73",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.allow_tls",
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_private_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935112458:security-group-rule/sgr-07f021dbb819196cc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07f021dbb819196cc",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01dbecc7f8441acf4",
            "security_group_rule_id": "sgr-07f021dbb819196cc",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869935112458",
            "id": "sgr-07f021dbb819196cc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.private_sg",
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935112458:security-group-rule/sgr-0f2ddd21b0e93f8ef",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0f2ddd21b0e93f8ef",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0bcda565418f7d7eb",
            "security_group_rule_id": "sgr-0f2ddd21b0e93f8ef",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869935112458",
            "id": "sgr-0f2ddd21b0e93f8ef",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.allow_tls",
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_https_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935112458:security-group-rule/sgr-0313b632d3eda9a55",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0313b632d3eda9a55",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0bcda565418f7d7eb",
            "security_group_rule_id": "sgr-0313b632d3eda9a55",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869935112458",
            "id": "sgr-0313b632d3eda9a55",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.allow_tls",
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935112458:security-group-rule/sgr-044e4e7ea8eacac05",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-044e4e7ea8eacac05",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0bcda565418f7d7eb",
            "security_group_rule_id": "sgr-044e4e7ea8eacac05",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869935112458",
            "id": "sgr-044e4e7ea8eacac05",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.allow_tls",
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_web_tier_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935112458:security-group-rule/sgr-094fc4853a66ab783",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-094fc4853a66ab783",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0bcda565418f7d7eb",
            "region": "us-east-1",
            "security_group_id": "sg-01dbecc7f8441acf4",
            "security_group_rule_id": "sgr-094fc4853a66ab783",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869935112458",
            "id": "sgr-094fc4853a66ab783",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.allow_tls",
            "module.sg.aws_security_group.private_sg",
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935112458:internet-gateway/igw-0a2bc326baefc7d34",
            "id": "igw-0a2bc326baefc7d34",
            "owner_id": "869935112458",
            "region": "us-east-1",
            "tags": {
              "Name": "web_igw"
            },
            "tags_all": {
              "Name": "web_igw"
            },
            "vpc_id": "vpc-0dae2106a257dfaca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "web_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a2bc326baefc7d34",
            "id": "r-rtb-0b423ad1ba993cfc31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0b423ad1ba993cfc3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869935112458",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0b423ad1ba993cfc3"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.web_igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935112458:route-table/rtb-084e4b35ef226944d",
            "id": "rtb-084e4b35ef226944d",
            "owner_id": "869935112458",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dae2106a257dfaca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869935112458",
            "id": "rtb-084e4b35ef226944d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935112458:route-table/rtb-0b423ad1ba993cfc3",
            "id": "rtb-0b423ad1ba993cfc3",
            "owner_id": "869935112458",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dae2106a257dfaca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869935112458",
            "id": "rtb-0b423ad1ba993cfc3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee57504df8213cd0",
            "region": "us-east-1",
            "route_table_id": "rtb-084e4b35ef226944d",
            "subnet_id": "subnet-00e8569cbe1ea9955"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet_1",
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046ed2457ed0b01a2",
            "region": "us-east-1",
            "route_table_id": "rtb-0b423ad1ba993cfc3",
            "subnet_id": "subnet-0750e0912626162b4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935112458:subnet/subnet-00e8569cbe1ea9955",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e8569cbe1ea9955",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "869935112458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-0dae2106a257dfaca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869935112458",
            "id": "subnet-00e8569cbe1ea9955",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935112458:subnet/subnet-0278ea1e43373144a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0278ea1e43373144a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "869935112458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-0dae2106a257dfaca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869935112458",
            "id": "subnet-0278ea1e43373144a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935112458:subnet/subnet-0750e0912626162b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0750e0912626162b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "869935112458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-0dae2106a257dfaca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "869935112458",
            "id": "subnet-0750e0912626162b4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935112458:vpc/vpc-0dae2106a257dfaca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c4c326a00f8336d8",
            "default_route_table_id": "rtb-084cdc52a2d0a2ad9",
            "default_security_group_id": "sg-02f62a9dffb07a471",
            "dhcp_options_id": "dopt-0030a60c3d079315e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dae2106a257dfaca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084cdc52a2d0a2ad9",
            "owner_id": "869935112458",
            "region": "us-east-1",
            "tags": {
              "Name": "web_vpc"
            },
            "tags_all": {
              "Name": "web_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}